<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/ic_title_home" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_business"
            android:title="@string/ic_title_business" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_entertainment"
            android:title="@string/ic_title_entertainment" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_menu_health"
            android:title="@string/ic_title_health" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_menu_science"
            android:title="@string/ic_title_science" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_menu_sports"
            android:title="@string/ic_title_sport" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_technology"
            android:title="@string/ic_title_technology" />

    </group>
</menu>
